[gd_scene load_steps=7 format=3 uid="uid://bwqb20sshr84i"]

[ext_resource type="Script" path="res://scripts/characters/cascao.gd" id="1_kwa58"]
[ext_resource type="Texture2D" uid="uid://bmj6mevsgnupw" path="res://assets/characters/cascao/gliding.png" id="2_1evov"]
[ext_resource type="Texture2D" uid="uid://c6r55ule1bmlv" path="res://assets/characters/cascao/idle.png" id="3_wwpnd"]
[ext_resource type="Texture2D" uid="uid://r62d4g1ucsnm" path="res://assets/characters/cascao/walking_0.png" id="4_e2qb6"]
[ext_resource type="Texture2D" uid="uid://dtlp31xn6ns8j" path="res://assets/characters/cascao/walking_1.png" id="5_nd6ke"]

[sub_resource type="SpriteFrames" id="SpriteFrames_tnfb0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_1evov")
}],
"loop": false,
"name": &"gliding",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_wwpnd")
}],
"loop": false,
"name": &"idle",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_e2qb6")
}, {
"duration": 1.0,
"texture": ExtResource("3_wwpnd")
}, {
"duration": 1.0,
"texture": ExtResource("5_nd6ke")
}, {
"duration": 1.0,
"texture": ExtResource("3_wwpnd")
}],
"loop": true,
"name": &"walking",
"speed": 5.0
}]

[node name="Cascao" type="CharacterBody2D"]
collision_layer = 9
collision_mask = 96
script = ExtResource("1_kwa58")
metadata/_edit_group_ = true

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(-0.000206351, -33.5614)
scale = Vector2(0.0901829, 0.0901829)
sprite_frames = SubResource("SpriteFrames_tnfb0")
animation = &"idle"

[node name="RightCollider" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-11, 92, 2, 92, 36, 65, 52, -11, 42, -60, -27, -60, -41, -25, -39, 65)

[node name="LeftCollider" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(11, 92, -2, 92, -36, 65, -52, -11, -42, -60, 27, -60, 41, -25, 39, 65)
